# Virtual_Interaction

./: .gitignore  CMakeLists.txt  HandTracking.cpp  HandTrackingTest.cpp  HandTrackingTestFour.cpp  HandTrackingTestThree.cpp  HandTrackingTestTwo.cpp  MoveMouseWithTarget.cpp  PaintingTest.cpp  README.md  VirtualInteraction.cpp  VirtualPainting.cpp  VirtualPaintingDraft.cpp  determineColor.py
include/: painting.cpp  painting.h  shared.cpp  shared.h
reports/: proposal.md  report.md  update.md
testFiles/: HandTracking.cpp  mousetest.cpp
