cmake_minimum_required(VERSION 2.8)
project( VirtualInteraction )
find_package( OpenCV REQUIRED )
find_package(X11 REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} ${X11_INCLUDE_DIR})
add_executable( VirtualInteration MoveMouseWithTarget.cpp )
target_link_libraries( VirtualInteration ${OpenCV_LIBS} ${X11_LIBRARIES})
