cmake_minimum_required(VERSION 2.8)
project( VirtualInteraction )
find_package( OpenCV REQUIRED )
find_package(X11 REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} ${X11_INCLUDE_DIR})
add_executable( Mouse MoveMouseWithTarget.cpp include/shared.cpp)
add_executable( Painting VirtualPainting.cpp include/shared.cpp include/painting.cpp)
target_link_libraries( Mouse ${OpenCV_LIBS} ${X11_LIBRARIES})
target_link_libraries( Painting ${OpenCV_LIBS} )
